# hspp

./: CMakeLists.txt  README.md  develop.sh  single-header.sh  test.cpp
.github/: FUNDING.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  coverage.yml  sanitizers.yml  valgrind.yml
develop/include/: concurrent.h  data.h  do_notation.h  parser.h  range.h  typeclass.h
include/: concurrent.h  coroutine.h  data.h  doNotation.h  hspp.h  hspp_single_header.h  monadTrans.h  parser.h  range.h  typeclass.h
include/hspp/: data.h  do_notation.h  parser.h  typeclass.h
sample/: CMakeLists.txt  common.h  coroutine.cpp  coroutine.sh  lyahfgg.cpp  lyahfgg12.cpp  lyahfgg2.cpp  lyahfgg6.cpp  lyahfgg7.cpp  parseExpr.cpp  parse_expr.cpp  pause.cpp  proposal.cpp  walk_the_line.cpp
test/: CMakeLists.txt
test/hspp/: CMakeLists.txt  concurrent.cpp  monadTrans.cpp  stm.cpp  test.cpp
