add_executable(unittests test.cpp stm.cpp)
target_include_directories(unittests PRIVATE)
target_compile_options(unittests PRIVATE ${BASE_COMPILE_FLAGS})
target_link_libraries(unittests PRIVATE hspp gtest_main)
add_link_options($BASE_LINK_FLAGS)
set_target_properties(unittests PROPERTIES CXX_EXTENSIONS OFF)
gtest_discover_tests(unittests)